2014-03-24  Alexander V. Lukyanov <lavv17f@gmail.com>

	* buffer.cc: (MoveDataHere) set eof only when all data are exhausted.

2014-03-18  Sami Farin <sami.farin@gmail.com>

	* FileSet.cc, FtpDirList.cc, Http.cc, PollVec.cc, complete.cc, lftp.cc:
	  fix warnings

2014-03-18  Alexander V. Lukyanov <lavv17f@gmail.com>

	* FileAccess.h, mkdirJob.h, FindJob.h: don't access the
	  FileAccessRefC ref in dtor, as the original FileAccessRef can be
	  already deleted.
	* FindJob.cc: don't add slash for plain files in URLs.

2014-03-17  Alexander V. Lukyanov <lavv17f@gmail.com>

	* resource.cc: add hftp:decode setting.
	* xarray.cc, xarray.h: use xrealloc instead of realloc; truncate
	  xarray_m in dtor, so that proper dispose method is called.
	* xmap.cc: use xfree for xmalloc'ed memory.

2014-03-14  Alexander V. Lukyanov <lavv17f@gmail.com>

	* SSH_Access.cc: add another password prompt format for FreeBSD.

2014-03-13  Alexander V. Lukyanov <lavv17f@gmail.com>

	* FileAccess.cc, FileAccess.h: get rid of direct delete calls.

2014-03-11  Alexander V. Lukyanov <lavv17f@gmail.com>

	* Http.cc, resource.cc: (http:accept-encoding, http:decode) new settings.

2014-03-04  Alexander V. Lukyanov <lavv17f@gmail.com>

	* CmdExec.cc, CmdExec.h, commands.cc: keep track of parent CmdExec;
	  add 'exit parent' subcommand; flush command buffer when exiting.
	* SFtp.cc: don't send FSETSTAT when file modification time is unknown.

2014-02-13  Alexander V. Lukyanov <lavv17f@gmail.com>

	* xarray.h, StringSet.h: (xarray_m) new template for malloc'ed
	  pointers; use it in StringSet.
	* xmap.h: (dispose) new method.

2014-02-12  Alexander V. Lukyanov <lavv17f@gmail.com>

	* Http.cc: don't call ExpandTildeInCWD every time.
	* Http.cc: use a perfect hash for header handling.
	* MirrorJob.cc: clear source/target sets when looping.

2014-02-11  Alexander V. Lukyanov <lavv17f@gmail.com>

	* MirrorJob.cc, MirrorJob.h: fix transfer rate reporting for parallel
	  mode mirror (--parallel option).